// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReplyMessageChannel component existing ticket with last message as chat message 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="chat"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="chat"
          />
          Reply via chat
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type chat 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="chat"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="chat"
          />
          Reply via chat
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type email 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="email"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-comment 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-comment"
          />
          Reply via Facebook comment
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-message 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-message"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-message"
          />
          Reply via Messenger
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-messenger 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-messenger"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-messenger"
          />
          Reply via Messenger
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket with message of type facebook-post 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="facebook-comment"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email-forward"
          />
          Forward by email
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="facebook-comment"
          />
          Reply via Facebook comment
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="internal-note"
          />
          Leave an internal note
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <div>
    Internal note
  </div>
</div>
`;

exports[`ReplyMessageChannel component existing ticket without messages 1`] = `null`;

exports[`ReplyMessageChannel component new ticket 1`] = `
<div
  className="component"
>
  <div
    className="mt-1 mr-2"
  >
    <UncontrolledDropdown>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        className="dropdownToggle"
        color=""
        type="button"
      >
        <SourceIcon
          className="md-2"
          type="email"
        />
      </DropdownToggle>
      <DropdownMenu
        flip={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <SourceIcon
            type="email"
          />
          Reply via email
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledDropdown>
  </div>
  <Connect(MessageSourceFields)
    canOpen={true}
    enabled={true}
    initialValues={
      Object {
        "to": Array [],
      }
    }
    inputRef={[Function]}
    isOpen={false}
    parentId="new"
  />
</div>
`;
